--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
+    "d3-request": "^1.0.5",
     "immutable": "^3.8.1",
     "mapbox-gl": "^0.38.0",
     "react": "^15.4.1",
