--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "mapbox-gl": "^0.38.0",
     "react": "^15.4.1",
     "react-dom": "^15.4.1",
-    "react-map-gl": "^3.0.0-alpha.12",
+    "react-map-gl": "^3.0.0-beta.3",
     "tween.js": "^16.6.0"
   },
   "devDependencies": {
